Доработки главной страницы на флексах

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <ul class="main-menu-list">
             <li>
               <a class="catalog" href="catalog.html">каталог товаров</a>
-              <ul class="catalog-list visually-hidden">
+              <ul class="catalog-list">
                 <li>
                   <a class="catalog-item" href="#">Виртуальная реальность</a>
                 </li>
@@ -90,7 +90,6 @@
         <li class="slide-1">
           <img src="img/slide-1-selfie-stick.png" width="384" height="486" alt="Селфи-палка Бена Стиллера">
           <div class="slide-description">
-            <div class="slide-decoration-line"></div>
             <p class="topic">Делай селфи,<br> как Бен Стиллер!</p>
             <p class="topic-text">Самая длинная палка для селфи доступна в нашем магазине. <br>
               Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -110,7 +109,7 @@
           </div>
         </li>
 
-        <li class="slide-2 visually-hidden">
+        <li class="slide-2 display-none">
           <img src="img/slide-2-band.png" width="345" height="485" alt="Фитнес-браслет «Я вижу, что ты снова ешь»">
           <p class="topic">Худеем правильно!</p>
           <p class="topic-text">Мотивирующие фитнес-браслеты помогут найти в себе силы <br>
@@ -126,7 +125,7 @@
           </table>
         </li>
 
-        <li class="slide-3 visually-hidden">
+        <li class="slide-3 display-none">
           <img src="img/slide-3-drone.png" width="526" height="334" alt="Дрон с камерой и лазером»">
           <p class="topic">Порхает как бабочка, жалит как пчела!</p>
           <p class="topic-text">Этот обычный, на первый взгляд, квадрокоптер оснащен <br>
@@ -196,13 +195,13 @@
                 подъезду совершенно бесплатно! Ведь мы неплохо <br>
                 заработаем, поднимая его на ваш этаж.</p>
             </li>
-            <li class="visually-hidden">
+            <li class="display-none">
               <p class="service-head">Гарантия</p>
               <p class="service-info">Если из-за возгорания купленного у нас товара у вас сгорит дом — <br>
                 не переживайте, мы выдадим вам новый. <br>
                 Товар, не дом, конечно же.<br>
             </li>
-            <li class="visually-hidden">
+            <li class="display-none">
               <p class="service-head">Кредит</p>
               <p class="service-info">Залезть в долговую яму стало проще! Кредитные консультанты <br>
                 подберут для вас наиболее выгодные <br>
@@ -240,11 +239,12 @@
     </div>
 
     <section class="info-columns container">
+      <h2 class="visually-hidden">Информация</h2>
 
-      <div class="about-us">
-        <div class="info-decoration-line"></div>
+      <div class="about-us info-decoration-line">
         <h2 class="about-us-head">О нас</h2>
-        <p class="about-us-info about-us-info-first-paragraph">Огромный выбор гаджетов не оставит равнодушным гика, <br>
+        <p class="about-us-info about-us-info-first-paragraph">Огромный выбор гаджетов не оставит
+          равнодушным гика, <br>
           который есть в каждом из нас.</p>
         <p class="about-us-info about-us-info-second-paragraph">Мы можем доставить ваш товар в самые отдаленные точки
           <br>
@@ -257,8 +257,7 @@
         <button class="button button-wide" type="button">подробнее о нас</button>
       </div>
 
-      <div class="write-us">
-        <div class="info-decoration-line"></div>
+      <div class="write-us info-decoration-line">
         <h2 class="write-us-head">Контакты</h2>
         <p class="write-us-info">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете <br>
           проверить работоспособность покупки. Всякое бывает.</p>
@@ -280,39 +279,13 @@
         </a>
 
         <ul class="footer-site-navigation">
-          <li class="footer-login-link-block">
-            <svg width="9" height="10" viewBox="0 0 9 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M4.49996 0.333328C5.69704 0.333328 6.66663 1.3775 6.66663 2.66666C6.66663 3.95583 5.69704 5 4.49996 5C3.30288 5 2.33329 3.95583 2.33329 2.66666C2.33329 1.3775 3.30288 0.333328 4.49996 0.333328ZM4.49996 9.66666C4.49996 9.66666 8.83329 9.66666 8.83329 8.5C8.83329 7.1 6.72079 5.58333 4.49996 5.58333C2.27913 5.58333 0.166626 7.1 0.166626 8.5C0.166626 9.66666 4.49996 9.66666 4.49996 9.66666Z"
-                fill="#FFC600" />
-            </svg>
+          <li>
             <a class="footer-login-link" href="#">Войти</a>
           </li>
-          <li class="footer-compare-link-block">
-            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M0.916748 3.36667H2.66675V9.08334H0.916748V3.36667ZM4.18342 0.916672H5.81675V9.08334H4.18342V0.916672ZM7.45008 5.58334H9.08342V9.08334H7.45008V5.58334Z"
-                fill="#FFC600" />
-            </svg>
-
+          <li>
             <a class="footer-compare-link" href="#">Сравнить</a>
           </li>
-          <li class="footer-cart-link-block">
-            <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0)">
-                <path
-                  d="M1.75233 2.89316V3.4188C1.75233 4.1907 2.40546 4.7735 3.15323 4.7735C3.901 4.7735 4.55413 4.1907 4.55413 3.4188V2.89316H5.35593V3.4188C5.35593 4.1907 6.00906 4.7735 6.75684 4.7735C7.50461 4.7735 8.15774 4.1907 8.15774 3.4188V2.89316H9.44194L8.80742 8.73049L8.80498 8.75292L8.80457 8.77548C8.79691 9.19912 8.47244 9.49999 8.12584 9.49999H1.78431C1.43757 9.49999 1.11319 9.19908 1.10558 8.77563L1.10518 8.75304L1.10274 8.73058L0.468207 2.89316H1.75233Z"
-                  fill="#FFC600" stroke="black" />
-                <path
-                  d="M3.15333 3.76068C3.35207 3.76068 3.51369 3.60735 3.51369 3.4188V1.53846C3.51369 1.01051 4.07486 0.683761 4.59477 0.683761H5.49567C6.04288 0.683761 6.39657 1.01923 6.39657 1.53846V3.4188C6.39657 3.60735 6.55829 3.76068 6.75693 3.76068C6.95558 3.76068 7.11729 3.60735 7.11729 3.4188V1.53846C7.11729 0.647009 6.43531 0 5.49567 0H4.59477C3.60126 0 2.79297 0.690171 2.79297 1.53846V3.4188C2.79297 3.60735 2.95459 3.76068 3.15333 3.76068Z"
-                  fill="#FFC600" />
-              </g>
-              <defs>
-                <clipPath id="clip0">
-                  <rect width="10" height="10" fill="#FFC600" />
-                </clipPath>
-              </defs>
-            </svg>
+          <li>
             <a class="footer-cart-link" href="#">Корзина</a>
           </li>
         </ul>
@@ -340,18 +313,14 @@
           </ul>
         </div>
 
-        <p>
-          <a class="contacts-phone" href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
+        <p class="contacts-phone">
+          <a href="tel:+74954959595">Тел.: +7 (495) 495-95-95</a>
         </p>
 
       </div>
 
 
       <div class="footer-third-level">
-
-        <div class="footer-decoration-line">
-        </div>
-
 
         <div class="footer-social">
           <ul class="footer-social-list">
@@ -380,7 +349,7 @@
     </div>
   </footer>
 
-  <section class="modal modal-feedback visually-hidden">
+  <section class="modal modal-feedback display-none">
     <h2 class="visually-hidden">Напишите нам</h2>
     <form action=" https://echo.htmlacademy.ru" method="post">
       <p>
